--- a/MiniCourseProject/Homies.Services.Data.Models/Homies.Services.Data.Models.csproj
+++ b/MiniCourseProject/Homies.Services.Data.Models/Homies.Services.Data.Models.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Homies.Data.Models\Homies.Data.Models.csproj" />
     <ProjectReference Include="..\Homies.Web.ViewModels\Homies.Web.ViewModels.csproj" />
   </ItemGroup>
 
