--- a/MiniCourseProject/Homies.Web.ViewModels/Homies.Web.ViewModels.csproj
+++ b/MiniCourseProject/Homies.Web.ViewModels/Homies.Web.ViewModels.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Homies.Data.Models\Homies.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
