Updated the usings, added Configurations folder and Common folder for code sustainability and maintenance.

--- a/MiniCourseProject/Homies/Homies.Web.csproj
+++ b/MiniCourseProject/Homies/Homies.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,7 +23,6 @@
     <ProjectReference Include="..\Homies.Common\Homies.Common.csproj" />
     <ProjectReference Include="..\Homies.Data.Models\Homies.Data.Models.csproj" />
     <ProjectReference Include="..\Homies.Data\Homies.Data.csproj" />
-    <ProjectReference Include="..\Homies.Services.Data.Models\Homies.Services.Data.Models.csproj" />
     <ProjectReference Include="..\Homies.Services.Data\Homies.Services.Data.csproj" />
     <ProjectReference Include="..\Homies.Web.ViewModels\Homies.Web.ViewModels.csproj" />
   </ItemGroup>
