--- a/MiniCourseProject/Homies/appsettings.Production.json
+++ b/MiniCourseProject/Homies/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SV9GMAA;Database=HomiesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=HomiesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Identity": {
     "SignIn": {
