Problems with identity options, launch and  app settings were fixed. Default environment was set to Production.

--- a/MiniCourseProject/Homies/appsettings.Production.json
+++ b/MiniCourseProject/Homies/appsettings.Production.json
@@ -1,12 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=HomiesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Identity": {
     "SignIn": {
       "RequireConfirmedAccount": true
     },
     "Password": {
+      "RequireDigit":  true,
       "RequireLowercase": true,
       "RequireUppercase": true,
       "RequireNonAlphanumeric": true,
