--- a/MiniCourseProject/Homies/appsettings.Development.json
+++ b/MiniCourseProject/Homies/appsettings.Development.json
@@ -1,22 +1,14 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=HomiesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Identity": {
     "SignIn": {
       "RequireConfirmedAccount": false
     },
     "Password": {
+      "RequireDigit": false,
       "RequireLowercase": false,
       "RequireUppercase": false,
       "RequireNonAlphanumeric": false,
       "RequiredLength": 4
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
